plugins {
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id 'idea'
}

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

def junitPlatformVersion = '1.12.2'

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web' 
	implementation 'org.springframework.boot:spring-boot-starter-jetty'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE'
	implementation "org.junit.platform:junit-platform-commons:${junitPlatformVersion}"
	implementation files('libs/mssql-jdbc-13.2.0.jre11.jar')
}

test { 
	useJUnitPlatform()
	jvmArgs '-Xshare:off'
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-test' 
		implementation 'org.junit.jupiter:junit-jupiter-api:5.12.2'
		implementation "org.junit.platform:junit-platform-engine:${junitPlatformVersion}"
	}
}
